--- a/app/Admin/AppPreference/AppPreference.html
+++ b/app/Admin/AppPreference/AppPreference.html
@@ -28,8 +28,7 @@
                         <div class="checkbox">
                             <label class="custom-control custom-checkbox">
                                 <input ng-model="preferences.enableContact" class="custom-control-input" type="checkbox">
-                                <span class="custom-control-indicator"></span>
-                                <span class="custom-control-description">Activer la page de Contact</span>
+                                <span class="custom-control-label">Activer la page de Contact</span>
                             </label>
                         </div>
                         <small class="form-text text-muted">Cette page permet aux utilisateurs de vous contacter par mail</small>
@@ -61,8 +60,7 @@
                         <div class="checkbox">
                             <label class="custom-control custom-checkbox">
                                 <input ng-model="preferences.enableRegister" class="custom-control-input" type="checkbox">
-                                <span class="custom-control-indicator"></span>
-                                <span class="custom-control-description">Autoriser l'inscription d'utilisateurs</span>
+                                <span class="custom-control-label">Autoriser l'inscription d'utilisateurs</span>
                             </label>
                         </div>
                     </div>
@@ -71,8 +69,7 @@
                         <div class="checkbox">
                             <label class="custom-control custom-checkbox">
                                 <input ng-model="preferences.transcriptEditAccess" class="custom-control-input" type="checkbox">
-                                <span class="custom-control-indicator"></span>
-                                <span class="custom-control-description">Ouverture de la transcription</span>
+                                <span class="custom-control-label">Ouverture de la transcription</span>
                             </label>
                         </div>
                     </div>
