--- a/app/Admin/Content/Edit/Edit.html
+++ b/app/Admin/Content/Edit/Edit.html
@@ -44,8 +44,7 @@
                     <div class="checkbox">
                         <label class="custom-control custom-checkbox">
                             <input ng-model="content.enableComments" class="custom-control-input" type="checkbox" checked="checked">
-                            <span class="custom-control-indicator"></span>
-                            <span class="custom-control-description">Activer les commentaires</span>
+                            <span class="custom-control-label">Activer les commentaires</span>
                         </label>
                     </div>
                 </div>
