--- a/app/Admin/Training/Edit/Edit.html
+++ b/app/Admin/Training/Edit/Edit.html
@@ -18,7 +18,7 @@
                     <label for="admin-trainingContent-edit-title" class="col-md-2 col-form-label text-md-right">Titre <span class="red-color">*</span></label>
                     <div class="col-md-10">
                         <input id="admin-trainingContent-edit-title" type="text" class="form-control" data-ng-model="trainingContent.title" required="required" />
-                        <small class="form-text text-muted">Optez pour un titre clair, décrivant précisément votre contenu et comportant des mots-clés signifiant si vous publiez un article.</small>
+                        <small class="form-text text-muted">Optez pour un titre clair, décrivant précisément votre contenu et comportant des mots-clés signifiants.</small>
                     </div>
                 </div>
                 <div class="form-group row">
