--- a/app/App/Edition/tpl/edition-viewer.html
+++ b/app/App/Edition/tpl/edition-viewer.html
@@ -1,6 +1,6 @@
 <div class="card-group h-100 no-gutters">
     <div class="card viewer bg-dark">
-        <div class="p-4 h-100">
+        <div class="h-100">
             <seadragon options="openseadragon" />
         </div>
     </div>
