--- a/app/App/Search/tpl/Search-form.html
+++ b/app/App/Search/tpl/Search-form.html
@@ -86,29 +86,25 @@
                 <div class="col-xl-6 pr-0">
                     <label class="custom-control custom-checkbox text-danger">
                         <input class="custom-control-input" id="app-search-form-transcription-status-1" ng-model="search.filters.status.todo"  type="checkbox" value="todo"/>
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">à faire</span>
+                        <span class="custom-control-label">à faire</span>
                     </label>
                 </div>
                 <div class="col-xl-6">
                     <label class="custom-control custom-checkbox text-warning">
                         <input class="custom-control-input" id="app-search-form-transcription-status-2" ng-model="search.filters.status.transcription"  type="checkbox" value="transcription"/>
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">en cours</span>
+                        <span class="custom-control-label">en cours</span>
                     </label>
                 </div>
                 <div class="col-xl-6 pr-0">
                     <label class="custom-control custom-checkbox text-secondary">
                         <input class="custom-control-input" id="app-search-form-transcription-status-3" ng-model="search.filters.status.validation"  type="checkbox" value="validation" />
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description"> en validation</span>
+                        <span class="custom-control-label"> en validation</span>
                     </label>
                 </div>
                 <div class="col-xl-6">
                     <label class="custom-control custom-checkbox text-success">
                         <input class="custom-control-input" id="app-search-form-transcription-status-4" ng-model="search.filters.status.validated"  type="checkbox" value="validated" />
-                        <span class="custom-control-indicator"></span>
-                        <span class="custom-control-description">validé</span>
+                        <span class="custom-control-label">validé</span>
                     </label>
                 </div>
             </div>
