--- a/app/App/Taxonomy/tpl/entities.html
+++ b/app/App/Taxonomy/tpl/entities.html
@@ -28,5 +28,5 @@
         </li>
     </ul>
     <p class="alert alert-warning" ng-if="results.length === 0">Aucun résultat ne correspond à votre recherche.</p>
-    <ul uib-pagination items-per-page="itemsPerPage" boundary-links="true" total-items="totalItems" ng-model="currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></ul>
+    <nav><ul uib-pagination items-per-page="itemsPerPage" boundary-links="true" total-items="totalItems" ng-model="currentPage" class="pagination pagination-sm justify-content-center" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></ul></nav>
 </div>
