--- a/app/App/Taxonomy/tpl/form-bibliography.html
+++ b/app/App/Taxonomy/tpl/form-bibliography.html
@@ -14,13 +14,11 @@
                         <h4>Type d'entrée bibliographique</h4>
                         <label class="custom-control custom-radio">
                             <input class="custom-control-input" type="radio" name="app-transcript-interaction-form-biblio-add-type" id="app-transcript-interaction-form-biblio-add-type-1" ng-model="bibliography.addForm.type" value="printedReference" checked="checked" >
-                            <span class="custom-control-indicator"></span>
-                            <span class="custom-control-description">Référence imprimée</span>
+                            <span class="custom-control-label">Référence imprimée</span>
                         </label>
                         <label class="custom-control custom-radio">
                             <input class="custom-control-input" type="radio" name="app-transcript-interaction-form-biblio-add-type" id="app-transcript-interaction-form-biblio-add-type-2" ng-model="bibliography.addForm.type" value="manuscriptReference">
-                            <span class="custom-control-indicator"></span>
-                            <span class="custom-control-description">Référence manuscrite</span>
+                            <span class="custom-control-label">Référence manuscrite</span>
                         </label>
                     </div>
 
