--- a/app/App/Training/Home/Home.html
+++ b/app/App/Training/Home/Home.html
@@ -16,7 +16,7 @@
     </nav>
     <div class="row mt-4">
         <div class="col-md-8 order-md-2">
-            <div class="text-justify mt-2 pr-md-3" ng-bind-html="preferences.trainingHomeContent | trustAsHtml"></div>
+            <div class="text-justify mt-2 mb-4 pr-md-3" ng-bind-html="preferences.trainingHomeContent | trustAsHtml"></div>
             <div class="alert alert-primary text-center">
                 <a ui-sref="transcript.app.training.content({order: 1})">Commencer le tutoriel</a>
             </div>
