--- a/app/App/User/Preferences/Preferences.html
+++ b/app/App/User/Preferences/Preferences.html
@@ -31,8 +31,7 @@
                         <div class="checkbox">
                             <label class="custom-control custom-checkbox">
                                 <input ng-model="form.smartTEI" class="custom-control-input" type="checkbox">
-                                <span class="custom-control-indicator"></span>
-                                <span class="custom-control-description">Activer SmartTEI</span>
+                                <span class="custom-control-label">Activer SmartTEI</span>
                             </label>
                         </div>
                         <small class="form-text text-muted">SmartTEI améliore votre expérience utilisateur en automatisant certaines tâches d'encodage de vos transcriptions en TEI comme l'ajout de balise <code>&lt;lb /&gt;</code> lorsque vous faites un retour à la ligne.</small>
@@ -41,8 +40,7 @@
                         <div class="checkbox">
                             <label class="custom-control custom-checkbox">
                                 <input ng-model="form.showComplexEntry" class="custom-control-input" type="checkbox">
-                                <span class="custom-control-indicator"></span>
-                                <span class="custom-control-description">Afficher l'aide à la saisie pour d'entrées complexes</span>
+                                <span class="custom-control-label">Afficher l'aide à la saisie pour d'entrées complexes</span>
                             </label>
                         </div>
                         <small class="form-text text-muted">Lorsque vous insérez une balise dont nous considérons la structure complexe, l'interface charge une page d'aide afin de vous orienter.</small>
@@ -51,8 +49,7 @@
                         <div class="checkbox">
                             <label class="custom-control custom-checkbox">
                                 <input ng-model="form.creditActions" class="custom-control-input" type="checkbox">
-                                <span class="custom-control-indicator"></span>
-                                <span class="custom-control-description">Être crédité pour mes transcriptions</span>
+                                <span class="custom-control-label">Être crédité pour mes transcriptions</span>
                             </label>
                         </div>
                         <small class="form-text text-muted">Lorsque vous insérez une balise dont nous considérons la structure complexe, l'interface charge une page d'aide afin de vous orienter.</small>
