--- a/app/index.html
+++ b/app/index.html
@@ -173,6 +173,7 @@
     <script type="text/javascript" src="/webapp/app/System/Filters/ContentTypeNameFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/EncodeXMLFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/ImageRenderFilter.js"></script>
+    <script type="text/javascript" src="/webapp/app/System/Filters/InternalAttributesRenderFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/PrefixRenderFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/ObjectToIdFilter.js"></script>
     <script type="text/javascript" src="/webapp/app/System/Filters/ResourceTypeNameFilter.js"></script>
