--- a/app/Admin/Entity/Edit/Edit.html
+++ b/app/Admin/Entity/Edit/Edit.html
@@ -31,8 +31,7 @@
                             <div class="checkbox">
                                 <label class="custom-control custom-checkbox">
                                     <input ng-model="entity.isShown" class="custom-control-input" type="checkbox">
-                                    <span class="custom-control-indicator"></span>
-                                    <span class="custom-control-description">Décochez cette case si vous ne souhaitez pas permettre l'affichage du contenu de ce testament aux utilisateurs</span>
+                                    <span class="custom-control-label">Décochez cette case si vous ne souhaitez pas permettre l'affichage du contenu de ce testament aux utilisateurs</span>
                                 </label>
                             </div>
                             <small class="form-text text-muted">Par conséquence, le contenu de ce testament ne sera pas proposé à la transcription</small>
