--- a/app/App/Edition/tpl/edition-contributors.html
+++ b/app/App/Edition/tpl/edition-contributors.html
@@ -1,11 +1,9 @@
 <div class="card bg-body" >
     <h3 class="card-header bg-light"><i class="fa fa-user red-color" aria-hidden="true"></i> Contributeurs</h3>
-    <div class="card-body">
-        <div class="row contributeurs">
-            <li class="col-lg-4 col-12" ng-repeat="contributor in resource._embedded.contributors">
-                <a ui-sref="transcript.app.user.profile({id: contributor.user.id})"><span class="red-color"><i class="fa fa-user fa-lg" aria-hidden="true"></i></span> {{ contributor.user.name }}</a>
-                {{ contributor.contributions }} <span ng-if="contributor.contributions > 1">contributions</span><span ng-if="contributor.contributions <= 1">contribution</span>
-            </li>
-        </div>
-    </div>
+    <div class="row contributeurs mx-2 py-3">
+            <div class="col-lg-4 col-md-6 mb-3" ng-repeat="contributor in resource._embedded.contributors">
+                <div><a ui-sref="transcript.app.user.profile({id: contributor.user.id})"><span class="red-color"><i class="fa fa-user fa-lg" aria-hidden="true"></i></span> {{ contributor.user.name }}</a></div>
+                <div>{{ contributor.contributions }} <span ng-if="contributor.contributions > 1">contributions</span><span ng-if="contributor.contributions <= 1">contribution</span></div>
+            </div>
+     </div>
 </div>
