--- a/app/App/Edition/tpl/edition-header.html
+++ b/app/App/Edition/tpl/edition-header.html
@@ -1,33 +1,36 @@
-<div class="row mb-5">
-    <div class="col-auto mr-auto">
+<div class="row">
+	<div class="col-12">
         <h1 class="page-heading mb-0"><i class="fa fa-edit" aria-hidden="true"></i> {{ entity.will.title }} - {{ resource.type | resourceTypeName | ucfirst }} {{resource.orderInWill}}</h1>
         <span class="badge badge-status" ng-class="getStatusClassLabel(resource.transcript.status)">{{ resource.transcript.status | transcriptionStatusName:entity.isShown }}</span>
     </div>
-    <div class="col-auto justify-content-end">
-        <nav class="mt-4">
-            <ul class="nav nav-pills">
-                <li class="nav-item" ng-include="'/webapp/app/App/Edition/tpl/edition-header-editButton.html'"></li>
-                <li class="nav-item"><a class="nav-link" ui-sref="transcript.app.search"><i class="fa fa-search fa-lg" aria-hidden="true"></i> Autres testaments</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle"  role="button" id="dropdownMenuNavResources" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-files-o fa-lg" aria-hidden="true"></i> Autres pages</a>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuNavResources">
-                        <li ng-repeat="iResource in entity.resources">
-                            <a class="dropdown-item" ng-if="iResource.id != resource.id" ui-sref="transcript.app.edition({idEntity: entity.id, idResource: iResource.id})">{{ iResource.type | ucFirstStrict }} {{ iResource.orderInWill }}</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown" ng-if="role == 'validator'">
-                    <a class="nav-link dropdown-toggle" role="button" id="dropdownMenuStatus" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="fa fa-gear fa-lg" ng-if="admin.status.loading == false" aria-hidden="true"></i><i class="fa fa-spin fa-circle-o-notch" ng-if="admin.status.loading == true"></i>
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuStatus">
-                        <li><a class="dropdown-item" ng-click="admin.status.action('todo')" ng-class="(resource.transcript.status == 'todo') ? 'bg-danger' : ''">À faire</a></li>
-                        <li><a class="dropdown-item" ng-click="admin.status.action('transcription')" ng-class="(resource.transcript.status == 'transcription') ? 'bg-warning' : ''">En cours</a></li>
-                        <li><a class="dropdown-item" ng-click="admin.status.action('validation')" ng-class="(resource.transcript.status == 'validation') ? 'bg-info' : ''">À valider</a></li>
-                        <li><a class="dropdown-item" ng-click="admin.status.action('validated')" ng-class="(resource.transcript.status == 'validated') ? 'bg-success' : ''">Validé</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+ </div>
+ 
+<div class="row justify-content-end my-3">
+	<div class="col-md-6 offset-md-6">
+		<nav>
+			<ul class="nav nav-pills float-right">
+				<li class="nav-item" ng-include="'/webapp/app/App/Edition/tpl/edition-header-editButton.html'"></li>
+				<li class="nav-item"><a class="nav-link" ui-sref="transcript.app.search"><i class="fa fa-search fa-lg" aria-hidden="true"></i> Autres testaments</a></li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle"  role="button" id="dropdownMenuNavResources" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-files-o fa-lg" aria-hidden="true"></i> Autres pages</a>
+					<ul class="dropdown-menu" aria-labelledby="dropdownMenuNavResources">
+						<li ng-repeat="iResource in entity.resources">
+							<a class="dropdown-item" ng-if="iResource.id != resource.id" ui-sref="transcript.app.edition({idEntity: entity.id, idResource: iResource.id})">{{ iResource.type | ucFirstStrict }} {{ iResource.orderInWill }}</a>
+						</li>
+					</ul>
+				</li>
+				<li class="nav-item dropdown" ng-if="role == 'validator'">
+					<a class="nav-link dropdown-toggle" role="button" id="dropdownMenuStatus" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<i class="fa fa-gear fa-lg" ng-if="admin.status.loading == false" aria-hidden="true"></i><i class="fa fa-spin fa-circle-o-notch" ng-if="admin.status.loading == true"></i>
+					</a>
+					<ul class="dropdown-menu" aria-labelledby="dropdownMenuStatus">
+						<li><a class="dropdown-item" ng-click="admin.status.action('todo')" ng-class="(resource.transcript.status == 'todo') ? 'bg-danger' : ''">À faire</a></li>
+	  					<li><a class="dropdown-item" ng-click="admin.status.action('transcription')" ng-class="(resource.transcript.status == 'transcription') ? 'bg-warning' : ''">En cours</a></li>
+						<li><a class="dropdown-item" ng-click="admin.status.action('validation')" ng-class="(resource.transcript.status == 'validation') ? 'bg-info' : ''">À valider</a></li>
+						<li><a class="dropdown-item" ng-click="admin.status.action('validated')" ng-class="(resource.transcript.status == 'validated') ? 'bg-success' : ''">Validé</a></li>
+					</ul>
+				</li>
+			</ul>
+			</nav>
     </div>
 </div>
