--- a/app/App/Training/Content/Exercise/Correction/tpl/correction-proposal.html
+++ b/app/App/Training/Content/Exercise/Correction/tpl/correction-proposal.html
@@ -3,7 +3,7 @@
         <h3 class="card-header bg-light d-block">Votre transcription</h3>
     </div>
     <div class="h-100">
-        <div id="transcript-edit-editor" style="height: calc(100% - 22px);">
+        <div id="transcript-edit-editor">
             <div id="transcript-edit-editor-ace" class="h-100">
                 <div ui-ace="{
                     mode: 'xml',
