--- a/app/App/Training/Content/Exercise/Exercise/Exercise.html
+++ b/app/App/Training/Content/Exercise/Exercise/Exercise.html
@@ -10,6 +10,7 @@
 <main class="container" role="main" ng-if="trainingContent.pageStatus == 'public'">
     <div ng-include="'/webapp/app/App/Training/Content/tpl/content-header.html'"></div>
 
+    <div ng-bind-html="trainingContent.exerciseHeader | trustAsHtml"></div>
     <div ui-view="transcript"></div>
 
     <div ng-include="'/webapp/app/App/Training/Content/tpl/content-footer.html'"></div>
