--- a/app/App/Training/Content/tpl/content-footer.html
+++ b/app/App/Training/Content/tpl/content-footer.html
@@ -2,7 +2,7 @@
 <div class="text-center">
     <div class="float-left">
         <a class="btn btn-sm btn-primary" ui-sref="transcript.app.home"><i class="fa fa-home"></i> Accueil</a>
-        <a class="btn btn-sm btn-primary" ui-sref="transcript.app.home"><i class="fa fa-list"></i> Sommaire</a>
+        <a class="btn btn-sm btn-primary" ui-sref="transcript.app.training.home"><i class="fa fa-list"></i> Sommaire</a>
     </div>
     <div class="float-right">
         {{ trainingContent.orderInTraining }} / {{ trainingContents.length }} pages
