--- a/app/App/Training/Content/tpl/content-header.html
+++ b/app/App/Training/Content/tpl/content-header.html
@@ -1,19 +1,19 @@
-<div class="row mb-5">
-    <div class="col-auto mr-auto">
+<div class="row">
+    <div class="col-12">
         <h1 class="page-heading mb-0"><i class="fa fa-graduation-cap" aria-hidden="true"></i> {{ trainingContent.title }}</h1>
     </div>
-    <div class="col-auto justify-content-end">
-        <nav class="mt-4">
-            <ul class="nav nav-pills">
-                <li class="nav-item" ng-if="user.roles | contains:'ROLE_ADMIN'">
-                    <a class="btn btn-light" ui-sref="transcript.admin.training.edit({id: trainingContent.id})"><i class="fa fa-edit fa-lg"></i> Modifier</a>
-                </li>
-            </ul>
-        </nav>
+</div>
+<div class="row my-3">
+	<div class="col-md-6 offset-md-6">
+		<ul class="nav nav-pills float-right">
+			<li class="nav-item" ng-if="user.roles | contains:'ROLE_ADMIN'">
+				 <a class="btn btn-light" ui-sref="transcript.admin.training.edit({id: trainingContent.id})"><i class="fa fa-edit fa-lg"></i> Modifier</a>
+			</li>
+		</ul>
     </div>
 </div>
 
-<div class="row bg-body post-meta">
+<div class="row bg-body post-meta mt-2">
     <div class="col-auto mr-auto" ng-if="trainingContent.editorialResponsibility != null">
         <strong>Par <span ng-repeat="user in trainingContent.editorialResponsibility"><span ng-if="$index > 0">, </span><a ui-sref="transcript.app.user.profile({id: user.id})">{{ user.name }}</a></span></strong>
         <div ng-if="trainingContent.editorialResponsibility.biography != null" ng-bind="trainingContent.editorialResponsibility.biography"></div>
