--- a/app/System/Footer/Footer.html
+++ b/app/System/Footer/Footer.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row align-items-center">
-        <div class="col-lg-2 col-sm-6 p-0">
+        <div class="col-lg-2 col-6 p-0">
             <nav class="nav flex-column bg-danger">
                 <a class="nav-link" ui-sref="transcript.app.blog">Actualités</a>
                 <a class="nav-link" ui-sref="transcript.app.content({id: preferences.discoverHomeContent})" ng-if="preferences.discoverHomeContent !== null">Découvrir</a>
@@ -9,7 +9,7 @@
                 <a class="nav-link" ui-sref="transcript.app.content({id: preferences.aboutContent})" ng-if="preferences.aboutContent !== null">À propos</a>
             </nav>
         </div>
-        <div class="col-lg-2 col-sm-6 p-0">
+        <div class="col-lg-2 col-6 p-0">
             <nav class="nav flex-column bg-secondary">
                 <a class="nav-link" ng-if="preferences.enableContact == true" ui-sref="transcript.app.contact">Contact</a>
                 <a class="nav-link" ng-if="preferences.aboutContent != null" ui-sref="transcript.app.content({id: preferences.aboutContent})">À propos</a>
@@ -25,12 +25,12 @@
         </div>
         <div class="col-lg-8 col-md-12" id="partenaires">
             <div class="row align-items-center">
-                <a class="col-md-2" href="http://www.sciences-patrimoine.org/" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/fondation-sciences-patrimoine.png"/></a>
-                <a class="col-md-2" href="http://centenaire.org/fr" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/centenaire.jpg"/></a>
-                <a class="col-md-2" href="http://www.archives-nationales.culture.gouv.fr/" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/archives-nationales.png"/></a>
-                <a class="col-md-2" href="http://www.archives.yvelines.fr/" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/ad78.jpg"/></a>
-                <a class="col-md-2" href="https://www.u-cergy.fr/fr/index.html" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/cergy.png"/></a>
-                <a class="col-md-2" href="http://www.enc-sorbonne.fr/" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/enc.png"/></a>
+                <a class="col-md-2 col-4" href="http://www.sciences-patrimoine.org/" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/fondation-sciences-patrimoine.png"/></a>
+                <a class="col-md-2 col-4" href="http://centenaire.org/fr" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/centenaire.jpg"/></a>
+                <a class="col-md-2 col-4" href="http://www.archives-nationales.culture.gouv.fr/" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/archives-nationales.png"/></a>
+                <a class="col-md-2 col-4" href="http://www.archives.yvelines.fr/" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/ad78.jpg"/></a>
+                <a class="col-md-2 col-4" href="https://www.u-cergy.fr/fr/index.html" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/cergy.png"/></a>
+                <a class="col-md-2 col-4" href="http://www.enc-sorbonne.fr/" target="_blank"><img class="img-fluid" src="/webapp/app/web/images/logos/enc.png"/></a>
             </div>
         </div>
     </div>
